--- a/organizationservice/organizationservice.yml
+++ b/organizationservice/organizationservice.yml
@@ -1,1 +1,10 @@
 example.organization.property: "I AM THE DEFAULT ORGANIZATION SERVICE"
+spring.jpa.database: "MYSQL"
+spring.datasource.platform:  "mysql"
+spring.datasource.driverClassName: "com.mysql.jdbc.Driver"
+spring.datasource.url: "jdbc:mysql://localhost:3306/ankit"
+spring.datasource.username: "root"
+spring.datasource.password: "root"
+spring.jpa.show-sql: "true"
+spring.jpa.hibernate.naming-strategy: "org.hibernate.cfg.ImprovedNamingStrategy"
+spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQL5Dialect"
